# sm-ext-cryptosocket

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.bat  protocol.md
.devcontainer/: Dockerfile  devcontainer.json
scripting/: socket_test.sp
scripting/include/: cryptosocket.inc
src/: crypto.cpp  crypto.hpp  crypto_ev.cpp  crypto_ev.hpp  crypto_io_service.hpp  encrypted_socket.cpp  encrypted_socket.hpp  extension.cpp  extension.hpp  handletypes.hpp  smn_cryptosocket.cpp  smsdk_config.h
